<resources>
    <string name="app_name">Disc Golf App</string>
    <string name="login">Login</string>
    <string name="create_account">Create an Account</string>
    <string name="welcome">Welcome!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_new_disc_title">Disc Details</string>
    <string name="add_disc">Add Disc</string>
    <string name="cancel_disc">Cancel</string>
    <string name="prompt_disc_id">ID</string>
    <string name="prompt_disc_name">Name</string>
    <string name="prompt_disc_color">Color</string>
    <string name="prompt_disc_manufacturer">Manufacturer</string>
    <string name="prompt_disc_type">Type</string>
    <string name="prompt_disc_distance">Avg. Dist.</string>
    <string name="prompt_disc_submit">Submit</string>
    <string name="prompt_disc_delete">Delete</string>
    <string name="prompt_disc_edit">Edit</string>
    <string name="prompt_password">Password</string>
    <string name="string_incorrect_login">The email and/or password you entered is incorrect</string>
    <string name="string_first_name">First Name</string>
    <string name="string_last_name">Last Name</string>
    <string name="string_pass_req">Password must be at least 8 characters.</string>
    <string name="string_confirm_pass">Confirm Password</string>
    <string name="string_incorrect_pass">Passwords do not match.</string>
    <string name="string_create">Create Account</string>
    <string name="string_register">Register</string>
    <string name="register_form_error">Please fill out all fields.</string>
    <string name="profile">User Information</string>
    <string name="string_sign_out">Sign Out</string>
    <string name="add_course">Add Course</string>
    <string name="enter_title">Enter Title</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="holes">Holes</string>
    <string name="save_course">Save Course</string>
    <string name="string_remember">Remember Me</string>
    <string name="user_login_details">UserLoginDetails</string>
    <string name="string_name">Full Name</string>
    <string name="string_reset_pass">Reset Password</string>
    <string name="string_forgot_pass">Forgot Password?</string>
    <string name="string_enter_email">Enter your account email.</string>
    <string name="string_email_addr">Email Address</string>
    <string name="string_change">Change</string>
    <string name="string_new_val">New Value</string>
    <string name="string_profile_pic">Profile Picture</string>
    <string name="enter_decription">Enter Description</string>
    <string name="pars">Pars</string>
    <string name="image">Image</string>
    <string name="yards">Yards</string>
    <string name="par">Par</string>
    <string name="hole">Hole</string>
    <string name="new_game">Start New Game</string>

    <string-array name="course_names">
        <item>Course 1</item>
        <item>Course 2</item>
        <item>Course 3</item>
        <item>Course 4</item>
        <item>Course 5</item>
        <item>Course 6</item>
        <item>Course 7</item>
        <item>Course 8</item>
        <item>Course 9</item>
        <item>Course 10</item>
    </string-array>

    <string-array name="course_descriptions">
        <item>Description of Course 1</item>
        <item>Description of Course 2</item>
        <item>Description of Course 3</item>
        <item>Description of Course 4</item>
        <item>Description of Course 5</item>
        <item>Description of Course 6</item>
        <item>Description of Course 7</item>
        <item>Description of Course 8</item>
        <item>Description of Course 9</item>
        <item>Description of Course 10</item>
    </string-array>

    <string name="numPlay">Number of Players</string>
    <string name="numHole">Number of Holes</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="startGame">Start Game</string>
    <string name="invite">Invite</string>
    <string name="name">Name</string>

    <string name="hole1">Hole 1</string>
    <string name="hole2">Hole 2</string>
    <string name="hole3">Hole 3</string>
    <string name="hole4">Hole 4</string>
    <string name="hole5">Hole 5</string>
    <string name="hole6">Hole 6</string>
    <string name="hole7">Hole 7</string>
    <string name="hole8">Hole 8</string>
    <string name="hole9">Hole 9</string>
    <string name="hole10">Hole 10</string>
    <string name="hole11">Hole 11</string>
    <string name="hole12">Hole 12</string>
    <string name="hole13">Hole 13</string>
    <string name="hole14">Hole 14</string>
    <string name="hole15">Hole 15</string>
    <string name="hole16">Hole 16</string>
    <string name="hole17">Hole 17</string>
    <string name="hole18">Hole 18</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="distance">Distance:</string>
    <string name="calculate_distance">Calculate Distance</string>
    <string name="save_hole">Save Hole</string>
    <string name="clear_map">Clear Map</string>
    <string name="previous_hole">Previous Hole</string>
    <string name="next_hole">Next Hole</string>
    <string name="select_player">Select Player</string>
    <string name="add_throw">Add Throw</string>
    <string name="undo_throw">Undo Throw</string>
    <string name="strokes">Strokes</string>
    <string name="hole_number">Hole #</string>
    <string name="finish">Finish</string>
    <string name="done">Done</string>
    <string name="results">Round Results</string>

    <string-array name="player_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="hole_array">
        <item>9</item>
        <item>18</item>
    </string-array>

</resources>
